1. 멤버 답변별 화면 추가. comments / unanswered 화면 2. 이전 push때 추가한 바꾼 group-list구조 반영 안된 화면에도 반영. 3. font-size / weight / color 등 디자인에 맞게 적용

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,11 +18,24 @@ $dark-red: #8B240B;
 $white: #ffffff;
 $bright-white: #B37F75;
 $gray: #e8e8e8;
+$better-bright-gray: #E2E2E2;
 $bright-gray: #f1f1f1;
 $dark-gray: #848484;
 $header-gray: #424E4F;
 $dropdown-font-gray: #878787;
 $black: #000000;
+
+$nine-pixel: 9px;
+$ten-pixel: 10px;
+$eleven-pixel: 11px;
+$twelve-pixel: 12px;
+$twelve-five-pixel: 12.5px;
+$thirteen-pixel: 13px;
+$fifteen-pixel: 15px;
+$seventeen-pixel: 17px;
+$eighteen-pixel: 18px;
+$twentynine-pixel: 29px;
+
 
 // ------ sass ------
 
@@ -47,7 +60,7 @@ $black: #000000;
     float: left;
     width: 50%;
     line-height: 46px;
-    font-size: 1.1em;
+    font-size: $seventeen-pixel;
     font-weight: 500;
     text-align: center;
     color: $white;
@@ -159,7 +172,7 @@ $black: #000000;
         span {
           float: left;
           margin: 0 0 0 10px;
-          font-size: 6px;
+          font-size: $eleven-pixel;
         }
       }
       .time {
@@ -181,7 +194,7 @@ $black: #000000;
           display: table-cell;
           vertical-align: middle;
           line-height: 100%;
-          font-size: 2.5px;
+          font-size: $eleven-pixel;
           color: $dark-gray;
         }
       }
@@ -201,7 +214,7 @@ $black: #000000;
         float: left;
         width: auto;
         font-weight: 500;
-        font-size: 6px;
+        font-size: $eleven-pixel;
         line-height: 32px;
       }
       .time {
@@ -212,7 +225,7 @@ $black: #000000;
           width: auto;
           height: auto;
           float: right;
-          font-size: 6px;
+          font-size: $eleven-pixel;
           color: $dark-gray;
         }
       }
@@ -232,7 +245,7 @@ $black: #000000;
       width: 100%;
       height: auto;
       padding: 10px;
-      font-size: 12px;
+      font-size: $twelve-pixel;
       line-height: 20px;
     }
     .servey {
@@ -246,6 +259,7 @@ $black: #000000;
         }
         span {
           margin: 0 0 0 10px;
+          font-size: $twelve-pixel;
         }
       }
       .checkbox-group {
@@ -254,6 +268,7 @@ $black: #000000;
         }
         span {
           margin: 0 0 0 10px;
+          font-size: $twelve-pixel;
         }
       }
 
@@ -269,6 +284,7 @@ $black: #000000;
         }
         span {
           float: right;
+          font-size: $twentynine-pixel;
         }
       }
       .input-number {
@@ -283,6 +299,7 @@ $black: #000000;
           border: none;
           border-radius: 3px;
           text-align: center;
+          font-size: $twelve-pixel;
         }
       }
     }
@@ -312,6 +329,9 @@ $black: #000000;
           width: auto;
           height: 100%;
         }
+        span {
+          font-size: $twelve-pixel;
+        }
       }
       .send {
         float: right;
@@ -323,6 +343,25 @@ $black: #000000;
         img {
           width: auto;
           height: 100%;
+        }
+        span {
+          font-size: $twelve-pixel;
+        }
+      }
+      .answered {
+        float: right;
+        width: auto;
+        height: 26px;
+        margin: 0 0 0 8px;
+        padding: 0 8px 0 5px;
+        background-color: $gray;
+        border-radius: 3px;
+        img {
+          width: auto;
+          height: 100%;
+        }
+        span {
+          font-size: $twelve-pixel;
         }
       }
     }
@@ -465,6 +504,7 @@ $black: #000000;
     border:none;
     background:transparent;
     padding: 0 0 0 20px;
+    font-size: $thirteen-pixel;
   }
 }
 
@@ -473,7 +513,7 @@ $black: #000000;
   height: 46px;
   span {
       color: $white;
-      font-size: 6px; 
+      font-size: $twelve-five-pixel; 
     }
   .popular {
     float: left;
@@ -492,6 +532,38 @@ $black: #000000;
     background-size: 100% 100%;
     text-align: center;
     line-height: 46px;
+  }
+  .my-bagle {
+    float: left;
+    width: 50%;
+    height: 46px;
+    background: url('../images/TabLeftBtn.png');
+    background-size: 100% 100%;
+    text-align: center;
+    .count {
+      color: $white;
+      font-size: $eighteen-pixel; 
+    }
+    .text {
+      color: $white;
+      font-size: $eleven-pixel; 
+    }
+  }
+  .my-post {
+    float: right;
+    width: 50%;
+    height: 46px;
+    background: url('../images/TabRightBtn.png');
+    background-size: 100% 100%;
+    text-align: center;
+    .count {
+      color: $white;
+      font-size: $eighteen-pixel; 
+    }
+    .text {
+      color: $white;
+      font-size: $eleven-pixel; 
+    }
   }
 }
 
@@ -546,7 +618,7 @@ $black: #000000;
           float: left;
           margin: 0 0 0 10px;
           color: $white;
-          font-size: 0.8em;
+          font-size: $eleven-pixel;
         }
       }
       .description {
@@ -556,7 +628,7 @@ $black: #000000;
         margin: 10px 0 0 0;
         padding: 0 0 0 15px;
         color: $white;
-        font-size: 0.8em;
+        font-size: $twelve-pixel;
       }
     }
     .option {
@@ -601,6 +673,7 @@ $black: #000000;
     span {
       float: left;
       margin: 8px 0 0 0;
+      font-size: $eleven-pixel;
     }
   }
   
@@ -642,9 +715,15 @@ $black: #000000;
     left: 0;
     width: auto;
     height: auto;
-    span {
+    .user-name {
       margin: 0 0 0 10px;
       color: $white;
+      font-size: $eighteen-pixel;
+    }
+    .user-information {
+      margin: 0 0 0 10px;
+      color: $white;
+      font-size: $eleven-pixel;
     }
   }
   .user-setting-btn {
@@ -673,6 +752,7 @@ $black: #000000;
     height: 100%;
     line-height: 67px;
     color: $white;
+    font-size: $thirteen-pixel;
   }
 }
 
@@ -693,6 +773,7 @@ $black: #000000;
       line-height: 43.5px;
       color: $white;
       margin: 0 0 0 15px;
+      font-size: $fifteen-pixel;
     }
   }
   img {
@@ -714,6 +795,7 @@ $black: #000000;
     display:table-cell;
     vertical-align:middle;
     padding: 0 0 0 15px;
+    font-size: $thirteen-pixel;
   }
   img {
     float: right;
@@ -736,6 +818,7 @@ $black: #000000;
       display:table-cell;
       vertical-align:middle;
       padding: 0 0 0 15px;
+      font-size: $thirteen-pixel;
     }
   }
   .type {
@@ -751,6 +834,7 @@ $black: #000000;
         float: left;
         width: 100%;
         height: auto;
+        font-size: $thirteen-pixel;
       }
     }
     img {
@@ -793,6 +877,7 @@ $black: #000000;
       margin: 0 0 0 16px;
       line-height: 46px;
       font-weight: 800;
+      font-size: $thirteen-pixel;
     }
   }
   .url {
@@ -805,6 +890,7 @@ $black: #000000;
       line-height: 46px;
       background-color: $gray;
       border-radius: 3px;
+      font-size: $ten-pixel;
     }
   }
 }
@@ -831,6 +917,7 @@ $black: #000000;
     margin: 0 0 0 15px;
     span {
       line-height: 62px;
+      font-size: $fifteen-pixel;
     }
   }
 }
@@ -849,6 +936,7 @@ $black: #000000;
     margin: 0 0 0 16px;
     span {
       line-height: 56px;
+      font-size: $thirteen-pixel;
     }
   }
   img {
@@ -878,6 +966,7 @@ $black: #000000;
         width: 80%;
         height: 50%;
         line-height: 38px;
+        font-size: $thirteen-pixel;
       }
       .dropdown-type-sub-title {
         float: left;
@@ -885,7 +974,7 @@ $black: #000000;
         height: 50%;
         line-height: 18px;
         color: $dropdown-font-gray;
-        font-size: 5px;
+        font-size: $ten-pixel;
       }
     }
     img {
@@ -904,6 +993,7 @@ $black: #000000;
   border: 1px solid transparent;
   border-bottom: 1px solid $gray;
   padding: 15px;
+  font-size: $thirteen-pixel;
 }
 
 .link-images-con {
@@ -943,7 +1033,7 @@ $black: #000000;
       height: 23px;
     }
     span {
-      font-size: 11px;
+      font-size: $eleven-pixel;
       color: $dark-gray;
     }
   }
@@ -961,6 +1051,7 @@ $black: #000000;
     height: 100%;
     border: none;
     padding: 0 0 0 15px;
+    font-size: $thirteen-pixel;
   }
 }
 
@@ -978,6 +1069,7 @@ $black: #000000;
   span {
     line-height: 46px;
     margin: 0 0 0 10px;
+    font-size: $thirteen-pixel;
   }
 }
 
@@ -988,6 +1080,7 @@ $black: #000000;
   span {
     line-height: 46px;
     margin: 0 0 0 15px;
+    font-size: $thirteen-pixel;
   }
   img {
     float: right;
@@ -1070,6 +1163,7 @@ $black: #000000;
     float: left;
     line-height: 62px;
     padding: 0 0 0 17px;
+    font-size: $thirteen-pixel;
   }
   .arrow-right-button {
     float: right;
@@ -1106,16 +1200,19 @@ $black: #000000;
     width: 60%;
     height: 100%;
     margin: 0 0 0 9px;
-    padding: 10px 0 0 0;
+    padding: 12px 0 0 0;
     .member-name {
       float: left;
       width: 60%;
       height: auto;
+      font-size: $thirteen-pixel;
     }
     .member-roll {
       float: left;
       width: 60%;
       height: auto;
+      font-size: $thirteen-pixel;
+      color: $dark-red;
     }
   }
   .remove {
@@ -1124,6 +1221,8 @@ $black: #000000;
     height: 100%;
     span {
       line-height: 62px;
+      font-size: $nine-pixel;
+      color: $better-bright-gray;
     }
   }
 }
@@ -1183,6 +1282,7 @@ $black: #000000;
     height: 46px;
     span {
       line-height: 46px;
+      font-size: $thirteen-pixel;
     }
   }
   .login-type-con {
@@ -1193,9 +1293,12 @@ $black: #000000;
     .login-type {
       float: left;
       padding: 0 15px 0 15px;
+      font-size: $thirteen-pixel;
     }
     .type-text {
       float: right;
+      font-size: $thirteen-pixel;
+      color: $dark-gray;
     }
   }
 }
@@ -1212,6 +1315,7 @@ $black: #000000;
     height: 100%;
     span {
       line-height: 56px;
+      font-size: $thirteen-pixel;
     }
   }
   .setting-sub-title {
@@ -1220,6 +1324,8 @@ $black: #000000;
     height: 100%;
     span {
       line-height: 56px;
+      font-size: $thirteen-pixel;
+      color: $dark-gray;
     }
   }
   img {
@@ -1259,6 +1365,7 @@ $black: #000000;
     height: 100%;
     border: none;
     padding: 0 0 0 15px;
+    font-size: $thirteen-pixel;
   }
 }
 
@@ -1272,6 +1379,7 @@ $black: #000000;
   span {
     float: left;
     line-height: 56px;
+    font-size: $thirteen-pixel;
   }
   img {
     float: right;
@@ -1308,11 +1416,14 @@ $black: #000000;
       float: left;
       width: 100%;
       height: auto;
+      font-size: $thirteen-pixel;
     }
     .member {
       float: left;
       width: 100%;
       height: auto;
+      font-size: $thirteen-pixel;
+      color: $dark-red;
     }
   }
   .check-image {
@@ -1323,6 +1434,101 @@ $black: #000000;
       float: right;
       width: 20px;
       height: 100%;
+    }
+  }
+}
+
+// ------ unanswered ------
+
+.unanswered-con {
+  width: 100%;
+  height: 46px;
+  .unanswered-photo {
+    float: left;
+    position: relative;
+    width: 49px;
+    height: 100%;
+    img {
+      display:block;
+      position:absolute;
+      top:50%;
+      left:50%;
+      width: 32px;
+      height: 32px;
+      margin: -16px 0 0 -16px;
+      border-radius: 50%;
+    }
+  }
+  span {
+    width: auto;
+    height: 100%;
+    float: left;
+    line-height: 46px;
+  }
+}
+
+// ------ answered ------
+
+.item-con {
+  width: 100%;
+  height: auto;
+  .item-title{
+    width: 100%;
+    height: 46px;
+    .item-name {
+      float: left;
+      line-height: 46px;
+      margin: 0 0 0 16px;
+      font-size: $thirteen-pixel;
+    }
+    .comment-counting {
+      float: right;
+      line-height: 46px;
+      margin: 0 16px 0 0;
+      font-size: $thirteen-pixel;
+    }
+  }
+  .comment-con {
+    width: 100%;
+    height: 62px;
+    .comment-user-photo{
+      float: left;
+      width: 50px;
+      height: 100%;
+      img {
+        width: 33px;
+        height: 33px;
+        border-radius: 50%;
+        margin: 4px 0 0 8px;
+      }
+    }
+    .comment-info {
+      float: left;
+      width: auto;
+      height: 100%;
+      .comment-name {
+        width: auto;
+        height: 33.3%;
+        span{
+          font-size: $thirteen-pixel;
+          font-weight: 600;
+        }
+      }
+      .comment-text {
+        width: auto;
+        height: 33.3%;
+        span {
+          font-size: $twelve-pixel;
+        }
+      }
+      .comment-time {
+        width: auto;
+        height: 33.3%;
+        span {
+          font-size: $eleven-pixel;
+          color: $dark-gray;
+        }
+      }
     }
   }
 }
