--- a/app/views/main/activity/activity.html
+++ b/app/views/main/activity/activity.html
@@ -11,7 +11,7 @@
 		<img src="images/profilePhotoThumb.png">
 	</div>
 	<div class="content">
-		<span>Sally Wilson was apply to join the Love Photo. 2h ago</span>
+		<span>Sally Wilson was apply to<br>join the Love Photo. 2h ago</span>
 	</div>
 	<div class="options-button">
 		<img src="images/AddMemberBtn.png">
