--- a/app/views/main/profile/profile.html
+++ b/app/views/main/profile/profile.html
@@ -9,8 +9,8 @@
 <div class="user-info">
 	<img src="images/ProfilePhoto.png">
 	<div class="name-con">
-		<span>My Name</span><br>
-		<span>My Information</span>
+		<span class="user-name">My Name</span><br>
+		<span class="user-information">My Information</span>
 	</div>
 	<a ng-href="#/edit-profile">
 		<div class="user-setting-btn">
@@ -20,11 +20,13 @@
 </div>
 
 <div class="bagle-tab">
-	<div class="popular">
-		<span>POPULAR BAGLE</span>
+	<div class="my-bagle">
+		<span class="count">26</span><br>
+		<span class="text">BAGLE</span>
 	</div>
-	<div class="new">
-		<span>NEW BAGLE</span>
+	<div class="my-post">
+		<span class="count">357</span><br>
+		<span class="text">POSTS</span>
 	</div>
 </div>
 
