--- a/app/views/main/timeline/timeline.html
+++ b/app/views/main/timeline/timeline.html
@@ -70,6 +70,23 @@
 			<span>Send</span>
 		</div>
 	</div>
+	<div class="options">
+		<div class="more">
+			<img src="images/PostOptionBtn.png">
+		</div>
+		<a ng-href="#/answered">
+			<div class="answered">
+				<img src="images/WriteComment.png">
+				<span>13</span>
+			</div>
+		</a>
+		<a ng-href="#/unanswered">
+			<div class="answered">
+				<img src="images/NotComment.png">
+				<span>27</span>
+			</div>
+		</a>
+	</div>
 </div>
 
 <div class="footer">
