--- a/app/views/popup/edit-profile/edit-profile.html
+++ b/app/views/popup/edit-profile/edit-profile.html
@@ -2,7 +2,7 @@
   <div class="left-button">
     <a ng-href="#/profile"><img src="images/CloseBtnGray.png"></a>
   </div>
-  <span>POSTER SELECT</span>
+  <span>EDIT PROFILE</span>
   <div class="right-button">
     <a ng-href="#/profile"><img src="images/CompleteBtnGray.png"></a>
   </div>
@@ -14,8 +14,8 @@
 		<img src="images/BagleImageBtn.png">
 	</div>
 	<div class="name-con">
-		<span>My Name</span><br>
-		<span>My Information</span>
+		<span class="user-name">My Name</span><br>
+		<span class="user-information">My Information</span>
 	</div>
 </div>
 
