--- a/app/views/popup/group/group.html
+++ b/app/views/popup/group/group.html
@@ -1,16 +1,21 @@
-<div class="group-info">
-	<div class="group-con">
-		<div class="master">
-			<img src="images/profilePhotoThumb.png">
-			<span>Sally Wilson</span><br><span>in Love Photo</span>
+<div class="group-list">
+	<div class="group-photo"></div>
+	<div class="group-gradation"></div>
+
+	<div class="group-info">
+		<div class="group-con">
+			<div class="master">
+				<img src="images/profilePhotoThumb.png">
+				<span>Sally Wilson</span><br><span>in Love Photo</span>
+			</div>
+			<div class="description">
+				Information
+			</div>
 		</div>
-		<div class="description">
-			Information
+		<div class="option">
+			<a ng-href="#/edit-group"><img src="images/BagleOptionBtn.png"></a>
+			<a ng-href="#/member"><img src="images/BagleMemberBtn.png"></a>
 		</div>
-	</div>
-	<div class="option">
-		<a ng-href="#/edit-group"><img src="images/BagleOptionBtn.png"></a>
-		<a ng-href="#/member"><img src="images/BagleMemberBtn.png"></a>
 	</div>
 </div>
 
@@ -48,11 +53,11 @@
 			<input class="checkbox-button" type="checkbox"><span>I`m black and tall.</span>
 		</div>
 		<div class="rating">
-			<img src="images/RatingIconActive.png">
-			<img src="images/RatingIconActive.png">
-			<img src="images/RatingIcon.png">
-			<img src="images/RatingIcon.png">
-			<img src="images/RatingIcon.png">
+			<img src="images/RatingGray.png">
+			<img src="images/RatingGray.png">
+			<img src="images/RatingDefault.png">
+			<img src="images/RatingDefault.png">
+			<img src="images/RatingDefault.png">
 			<span>2.0</span>
 		</div>
 		<div class="input-number">
