--- a/app/views/popup/profile/profile.html
+++ b/app/views/popup/profile/profile.html
@@ -10,32 +10,42 @@
 <div class="user-info">
 	<img src="images/ProfilePhoto.png">
 	<div class="name-con">
-		<span>User Name</span><br>
-		<span>User Information</span>
+		<span class="user-name">My Name</span><br>
+		<span class="user-information">My Information</span>
 	</div>
 </div>
 
 <div class="bagle-tab">
-	<div class="popular">
-		<span>POPULAR BAGLE</span>
+	<div class="my-bagle">
+		<span class="count">26</span><br>
+		<span class="text">BAGLE</span>
 	</div>
-	<div class="new">
-		<span>NEW BAGLE</span>
+	<div class="my-post">
+		<span class="count">357</span><br>
+		<span class="text">POSTS</span>
 	</div>
 </div>
 
-<div class="group-info">
-	<div class="group-con">
-		<div class="master">
-			<img src="images/profilePhotoThumb.png">
-			<span>Sally Wilson</span><br><span>in Love Photo</span>
+
+<div class="group-list">
+	<div class="group-photo"></div>
+	<div class="group-gradation"></div>
+
+	<div class="group-info">
+		<div class="group-con">
+			<div class="master">
+				<img src="images/profilePhotoThumb.png">
+				<span>Sally Wilson</span><br><span>in Love Photo</span>
+			</div>
+			<div class="description">
+				Information
+			</div>
 		</div>
-		<div class="description">
-			Information
+		<div class="option">
+			<img src="images/AddBagleBtn.png">
+			<img src="images/AddBagleBtn.png">
 		</div>
-	</div>
-	<div class="option">
-		<img src="images/AddBagleBtn.png">
-		<img src="images/AddBagleBtn.png">
 	</div>
 </div>
+
+
