--- a/app/views/popup/create-group/create-group.html
+++ b/app/views/popup/create-group/create-group.html
@@ -13,10 +13,10 @@
 	<div class="group-gradation"></div>
 	<div class="create-name-con">
 		<div class="name">
-			<span>BAGLE NAME</span>
+			<span class="create-bagle-name">BAGLE NAME</span>
 		</div>
 		<div class="name">
-			<span>Information</span>
+			<span class="create-bagle-information">Information</span>
 		</div>
 		<img src="images/BagleImageBtn.png">
 	</div>
