--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -369,12 +369,12 @@ $twentynine-pixel: 29px;
 .auth {
   float: left;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background-color: $red;
   .auth-menu {
     float: left;
     width: 100%;
-    height: 100%;
+    height: auto;
     .signup {
       float: left;
       width: 25%;
