--- a/app/views/popup/auth/signup/signup.html
+++ b/app/views/popup/auth/signup/signup.html
@@ -1,20 +1,20 @@
 <div class="auth">
 	<div class="auth-menu">
-		<a ng-href="#/signup"><span class="signup">SIGNUP</span></a>
+		<a ng-href="#/signup"><span class="signup-signup-tab">SIGNUP</span></a>
 		<div class="logo">
 			<img src="images/LoginLogo.png">
 		</div>
-		<a ng-href="#/login"><span class="login">LOGIN</span></a>
+		<a ng-href="#/login"><span class="signup-login-tab">LOGIN</span></a>
 	</div>
 	<div class="write">
-		<div class="email-con">
-			<input class="email" type="text" placeholder="NAME">
+		<div class="signup-point-con">
+			<input class="signup-name" type="text" placeholder="NAME">
 		</div>
-		<div class="password-con">
-			<input class="password" type="text" placeholder="EMAIL">
+		<div class="default-con">
+			<input class="auth-input" type="text" placeholder="EMAIL">
 		</div>
-		<div class="password-con">
-			<input class="password" type="text" placeholder="PASSWORD">
+		<div class="default-con">
+			<input class="auth-input" type="text" placeholder="PASSWORD">
 			<a ng-href="#/timeline"><img class="approval" src="images/LoginBtn.png"></a>
 		</div>
 	</div>
