--- a/app/views/main/profile/profile.html
+++ b/app/views/main/profile/profile.html
@@ -7,16 +7,18 @@
 </div>
 
 <div class="user-info">
-	<img src="images/ProfilePhoto.png">
+	<div class="blank-div"></div>
 	<div class="name-con">
-		<span class="user-name">My Name</span><br>
-		<span class="user-information">My Information</span>
-	</div>
-	<a ng-href="#/edit-profile">
-		<div class="user-setting-btn">
-			<img src="images/SettingBtn.png">
+		<div class="user-info-text">
+			<span class="user-name">My Name</span><br>
+			<span class="user-information">My Information</span>
 		</div>
-	</a>
+		<div class="user-setting-btn">
+			<a ng-href="#/edit-profile">
+				<img src="images/SettingBtn.png">
+			</a>
+		</div>
+	</div>
 </div>
 
 <div class="bagle-tab">
