--- a/app/views/popup/edit-profile/edit-profile.html
+++ b/app/views/popup/edit-profile/edit-profile.html
@@ -9,13 +9,15 @@
 </div>
 
 <div class="user-info">
-	<img src="images/ProfilePhoto.png">
+	<div class="blank-div"></div>
 	<div class="change-photo-btn">
 		<img src="images/BagleImageBtn.png">
 	</div>
 	<div class="name-con">
-		<span class="user-name">My Name</span><br>
-		<span class="user-information">My Information</span>
+		<div class="user-info-text-popup">
+			<span class="user-name">My Name</span><br>
+			<span class="user-information">My Information</span>
+		</div>
 	</div>
 </div>
 
@@ -50,11 +52,13 @@
 	</div>
 </a>
 
-<div class="setting-con">
-	<div class="setting-tltle">
-		<span>LOG OUT</span>
+<a ng-href="#/login">
+	<div class="setting-con">
+		<div class="setting-tltle">
+			<span>LOG OUT</span>
+		</div>
 	</div>
-</div>
+</a>
 
 <div class="delete-account">
 	<span>DELETE ACCOUNT</span>
