--- a/app/views/popup/profile/profile.html
+++ b/app/views/popup/profile/profile.html
@@ -8,10 +8,12 @@
 </div>
 
 <div class="user-info">
-	<img src="images/ProfilePhoto.png">
+	<div class="blank-div"></div>
 	<div class="name-con">
-		<span class="user-name">My Name</span><br>
-		<span class="user-information">My Information</span>
+		<div class="user-info-text-popup">
+			<span class="user-name">My Name</span><br>
+			<span class="user-information">My Information</span>
+		</div>
 	</div>
 </div>
 
